tweaking LaTeX for fleet normalization (#244)
As started with #243, we want units such as 63 M to be non-italic 63 _M_.
While the original formula for fleet sampling followed that generally, the 1k suffix fell through the cracks.

This PR corrects that (note that we keep the lower-case "k" here to match the app's UI – where we rely on the unicode ₖ which happens to be lowercase):

![CleanShot 2022-06-10 at 11 40 44](https://user-images.githubusercontent.com/486904/173039063-ea543d12-27ac-4b6a-9534-62de077a87aa.png)

--- a/docs/platform/charts.mdx
+++ b/docs/platform/charts.mdx
@@ -170,7 +170,7 @@ $$
 For the values in the screenshot above that translates to:
 
 $$
-63\textup{M}_{1k}=2.2\textup{B} \times \frac{1000}{35\textup{K}}
+63\textup{M}_{1\textup{k}}=2.2\textup{B} \times \frac{1000}{35\textup{K}}
 $$
 
 ### Examples of Chart Normalization
