Remove alert modal screenshot (#239) (#248)
### Issues addressed
    Notification target were added to alert creation/editing

    ### Summary of changes
    Remove old screenshots
    Add new screenshot with notification targets item
    Add a description about choosing the notification targets for alert events

--- a/docs/platform/alerts.mdx
+++ b/docs/platform/alerts.mdx
@@ -29,6 +29,7 @@ for devices with serial numbers starting with `MFLT`.
 - Click **Alerts** in the sidebar.
 - Click **New Alert** in the top right.
 - Provide a **Title** and optional **Description** (but highly advised)!
+- Choose **Notification targets** to which Alert events will be sent
 - Next, the **Condition** value is the Metric string key within a heartbeat.
 - We set the condition value to **is less than** **5**.
 - We also wanted to make sure that the **Device Serial** values start with
@@ -36,7 +37,7 @@ for devices with serial numbers starting with `MFLT`.
 - To do this we click **Add**, and specify these values. To add multiple
   filters, click **add "and" condition** and repeat the process.
 
-![Creating an Alert in the Memfault app](/img/docs/platform/alerts-create-min.png)
+![Creating an Alert in the Memfault app](/img/docs/platform/alerts-create.png)
 
 - Above, we have created our Alert! Click **OK**
 
