--- a/blog/2022-05-31.mdx
+++ b/blog/2022-05-31.mdx
@@ -2,15 +2,15 @@
 title: May 2022
 ---
 
-### Memfault OTA for SWUpdate users
+### Memfault OTA for Embedded Linux
 
 Memfault’s over-the-air update service is now
-[available on Embedded Linux](/docs/linux/linux-releases-integration-guide) and
-SWUpdate [via the hawkBit DDI](/docs/linux/linux-memfault-hawkbit-comparison).
-This makes all Memfault OTA management and hosting features such as cohorts,
-staged rollouts, full vs. delta releases, and a scalable global CDN available to
-Linux devices that utilize one of the most popular update agents. Memfault also
-added support for forced (non-interactive) updates – invaluable for delivering
+[available on Embedded Linux with SWUpdate](/docs/linux/linux-releases-integration-guide)
+via the [hawkBit DDI](/docs/linux/linux-memfault-hawkbit-comparison). This makes
+all Memfault OTA management and hosting features such as cohorts, staged
+rollouts, full vs. delta releases, and a scalable global CDN available to Linux
+devices that utilize one of the most popular update agents. Memfault also added
+support for forced (non-interactive) updates – invaluable for delivering
 security updates to embedded IoT devices.
 
 ![Memfault ❤️ Linux.png](/img/blog/2022-05-31-MemfaultHeartLinux.png)
