Add serial regex to docs (#257)
* Add serial regex to docs

 ### Issues addressed
Customers don't know that `:` and other characters are not allowed in
serials until they try it.

Context:
https://memfault.slack.com/archives/C024S8U2JGH/p1656441342489809?thread_ts=1656440944.743469&cid=C024S8U2JGH

 ### Summary of changes
Add regex to docs.

 ### Test plan
n/a

* Add to terminology page

--- a/docs/linux/linux-releases-integration-guide.mdx
+++ b/docs/linux/linux-releases-integration-guide.mdx
@@ -31,7 +31,8 @@ tracked.
   For example, this may be a serial number written into the EEPROM of your
   product in the factory or a chip identifier present in the silicon of the main
   MCU on your platform. This identifier _must_ be unique for every device in the
-  same Project.
+  same Project. It must be an alphanumeric slug (matching this regex:
+  `^[-a-zA-Z0-9_]+$`).
 - Hardware Version: for a given device, the revision of hardware present. For
   example, this can be used to represent the different stages of
   [manufacturing builds](https://mflt.io/hardware-engineer-speak) (`evt`, `dvt`,
