--- a/docs/platform/memfault-terminology.mdx
+++ b/docs/platform/memfault-terminology.mdx
@@ -16,7 +16,7 @@ sidebar_label: Memfault Terminology
 | Device - Inactive <a class="anchor-offset" name="device-inactive"></a> | A device that has previously reported diagnostics data, but not in the last week.                                                                                                                                                                                                                                                                                                                                                      |
 | Device - Pending <a class="anchor-offset" name="device-pending"></a>   | A device that has been created but diagnostics data has not yet been received. This can happen when devices have been created via API or CSV upload, or when devices check for OTA updates but are not uploading diagnostics data.                                                                                                                                                                                                     |
 | Device Attribute                                                       | The latest value reported for a device for a custom metric (e.g. `battery_level`).                                                                                                                                                                                                                                                                                                                                                     |
-| Device ID                                                              | The Unique Identifier of a Device, often the device serial                                                                                                                                                                                                                                                                                                                                                                             |
+| Device ID                                                              | The Unique Identifier of a Device, often the device serial. It must be an alphanumeric slug (matching this regex: `^[-a-zA-Z0-9_]+$`).                                                                                                                                                                                                                                                                                                 |
 | Device Set                                                             | A collection of Devices defined by a search query.                                                                                                                                                                                                                                                                                                                                                                                     |
 | Event                                                                  | A small payload of information sent from a Device. There are many types of Events, such as Heartbeat Events, Events, Device install Events, etc.                                                                                                                                                                                                                                                                                       |
 | Event - Device Install                                                 | Events that are generated during a firmware update procedure tracking progress                                                                                                                                                                                                                                                                                                                                                         |
