Fix Opsgenie spelling (#260)

--- a/docs/platform/notifications.mdx
+++ b/docs/platform/notifications.mdx
@@ -92,7 +92,7 @@ information.
 
 External Targets allow you to route Notifications in to external notification
 services that your on-call responders may already be using (e.g. PagerDuty,
-OpsGenie, etc.) through Email Targets, or to collect them for visibility in
+Opsgenie, etc.) through Email Targets, or to collect them for visibility in
 Slack through a webhook integration. These targets can then be included within
 Group Targets, to further refine your workflows.
 
