--- a/docs/platform/projects-and-fleets.mdx
+++ b/docs/platform/projects-and-fleets.mdx
@@ -167,6 +167,13 @@ overview of whatever properties of your fleet you may be interested in, but you
 shouldn't rely on the exact number, since the tallying time may vary slightly
 from day to day.
 
+When using any time-related criteria to describe a device set (for example,
+"Last Seen" or "Historical Data" filters), the "Start date" and "End date"
+values are stored into the Device Set as relative to the time of the query, as
+depicted below:
+
+![](/img/docs/platform/device-set-criteria-relative-time.svg)
+
 <!--
 TODO: Hardware Versions, Software Versions etc are also "organizational units", just in another dimension.
 -->
