--- a/docs/platform/introduction.mdx
+++ b/docs/platform/introduction.mdx
@@ -4,9 +4,8 @@ title: Introduction to Memfault
 sidebar_label: Introduction
 ---
 
-import ReadMoreAdmonition from "@site/src/components/ReadMoreAdmonition";
-
 import { AiFillAndroid, BiChip } from "react-icons/all";
+import ReadMoreAdmonition from "@site/src/components/ReadMoreAdmonition";
 
 Memfault is a cloud platform that allows you and your team to continuously
 monitor devices, debug firmware issues, and deploy OTA updates to your fleet to
@@ -51,50 +50,37 @@ where a customer support agent files a ticket for engineering that already
 includes a Memfault link to the particular device that's having issues, or even
 a link to the trace itself.
 
-<figure>
-  <img
-    src="/img/docs/platform/intro-to-memfault/1-debugging-registers-locals-min.png"
-    alt="MCU trace analysis view, viewing registers and locals"
-  />
-  <figcaption>
-    Our trace analysis view offers the highest resolution available into the
-    crash dumps your devices upload. In this example, you can see the values of
-    local variables and registers at the time of the crash.
-  </figcaption>
-</figure>
+import debugRegLocal from "../../static/img/docs/platform/intro-to-memfault/1-debugging-registers-locals-min.png";
 
-<figure>
-  <img
-    src="/img/docs/platform/intro-to-memfault/2-debugging-globals-statics-min.png"
-    alt=""
-  />
-  <figcaption>
-    The Memfault Web Application performs crash symbolication on your devices'
-    traces and allows you to dig deep into the state of the device, right from
-    your browser.
-  </figcaption>
-</figure>
+<ImageFigure
+  src={debugRegLocal}
+  alt="MCU trace analysis view, viewing registers and locals"
+>
+  Our trace analysis view offers the highest resolution available into the crash
+  dumps your devices upload. In this example, you can see the values of local
+  variables and registers at the time of the crash.
+</ImageFigure>
 
-<figure>
-  <img
-    src="/img/docs/platform/intro-to-memfault/3-debugging-logs-min.png"
-    alt=""
-  />
-  <figcaption>
-    Read logs relevant to each trace and perform complex text searches.
-  </figcaption>
-</figure>
+import debugGlobalStats from "../../static/img/docs/platform/intro-to-memfault/2-debugging-globals-statics-min.png";
 
-<figure>
-  <img
-    src="/img/docs/platform/intro-to-memfault/5-debugging-android-issue-min.png"
-    alt=""
-  />
-  <figcaption>
-    An example of a root-cause analysis for a Java runtime exception from an
-    Android device.
-  </figcaption>
-</figure>
+<ImageFigure src={debugGlobalStats} alt="">
+  The Memfault Web Application performs crash symbolication on your devices'
+  traces and allows you to dig deep into the state of the device, right from
+  your browser.
+</ImageFigure>
+
+import debugLogsMin from "../../static/img/docs/platform/intro-to-memfault/3-debugging-logs-min.png";
+
+<ImageFigure src={debugLogsMin} alt="">
+  Read logs relevant to each trace and perform complex text searches.
+</ImageFigure>
+
+import debugAndroidIssue from "../../static/img/docs/platform/intro-to-memfault/5-debugging-android-issue-min.png";
+
+<ImageFigure src={debugAndroidIssue} alt="">
+  An example of a root-cause analysis for a Java runtime exception from an
+  Android device.
+</ImageFigure>
 
 Memfault traces go through a process of deduplication, so that you don't have to
 look at every single instance of a problem. A group of collected traces with
@@ -145,29 +131,21 @@ scenarios.
 Memfault OTA updates provide increased velocity, reduce the risk of rolling out
 an update, and offer visibility into team productivity.
 
-<figure>
-  <img
-    src="/img/docs/platform/intro-to-memfault/6-version-matrix-staged-rollout-min.png"
-    alt=""
-  />
-  <figcaption>
-    Activating a staged rollout to test version <code>2.2.0</code> of our
-    product. Around 1.3K devices out of 9.1K in this fleet will receive the
-    latest version as a canary release, and the team will monitor the behavior
-    of the new firmware.
-  </figcaption>
-</figure>
+import versionMatrix from "../../static/img/docs/platform/intro-to-memfault/6-version-matrix-staged-rollout-min.png";
 
-<figure>
-  <img
-    src="/img/docs/platform/intro-to-memfault/7-version-matrix-staged-rollout-activated-min.png"
-    alt=""
-  />
-  <figcaption>
-    A view into the current state of this cohort of 9.1K devices and the next
-    OTA payload they will be downloading.
-  </figcaption>
-</figure>
+<ImageFigure src={versionMatrix} alt="">
+  Activating a staged rollout to test version <code>2.2.0</code> of our product.
+  Around 1.3K devices out of 9.1K in this fleet will receive the latest version
+  as a canary release, and the team will monitor the behavior of the new
+  firmware.
+</ImageFigure>
+
+import versionMatrixActivated from "../../static/img/docs/platform/intro-to-memfault/7-version-matrix-staged-rollout-activated-min.png";
+
+<ImageFigure src={versionMatrixActivated} alt="">
+  A view into the current state of this cohort of 9.1K devices and the next OTA
+  payload they will be downloading.
+</ImageFigure>
 
 To benefit from the increased velocity while still maintaining the high
 standards of quality required by the nature of hardware products, use the rest
@@ -195,27 +173,19 @@ compounds with all other features of Memfault.
 A timeline view for every single individual device showcasing its metrics,
 including time-series data, reboots and crashes.
 
-<figure>
-  <img
-    src="/img/docs/platform/intro-to-memfault/4-metrics-android-timeline-min.png"
-    alt=""
-  />
-  <figcaption>
-    The default set of metrics Android devices report when using Memfault.
-    Adding your own custom metrics to this selection is extremely easy.
-  </figcaption>
-</figure>
+import androidTimeline from "../../static/img/docs/platform/intro-to-memfault/4-metrics-android-timeline-min.png";
 
-<figure>
-  <img
-    src="/img/docs/platform/intro-to-memfault/8-device-timeline-mcu-min.png"
-    alt=""
-  />
-  <figcaption>
-    Analyzing an apparent correlation between battery levels and CPU usage in a
-    single MCU device.
-  </figcaption>
-</figure>
+<ImageFigure src={androidTimeline} alt="">
+  The default set of metrics Android devices report when using Memfault. Adding
+  your own custom metrics to this selection is extremely easy.
+</ImageFigure>
+
+import deviceTimeline from "../../static/img/docs/platform/intro-to-memfault/8-device-timeline-mcu-min.png";
+
+<ImageFigure src={deviceTimeline} alt="">
+  Analyzing an apparent correlation between battery levels and CPU usage in a
+  single MCU device.
+</ImageFigure>
 
 ### Fleet metrics
 
@@ -238,37 +208,33 @@ Among others, adding metrics to your Memfault integration unlocks:
   /docs/platform/metrics/#searching-devices-by-attributes-and-timeseries
 [device-sets]: /docs/platform/projects-and-fleets/#device-sets
 
-<figure>
-  <img src="/img/docs/platform/overview-dashboard-drilldown-min.png" alt="" />
-  <figcaption>
-    An aggregation of reboot events in your fleet. Drill down to find out which
-    devices are causing an anomaly.
-  </figcaption>
-</figure>
+import overviewDashboard from "../../static/img/docs/platform/overview-dashboard-drilldown-min.png";
 
-<figure>
-  <img src="/binary-assets/fleet-wide-metrics-compare-min.png" alt="" />
-  <figcaption>
-    Compare aggregated custom metrics on your whole fleet and see the effect of
-    your recent updates using hard data.
-  </figcaption>
-</figure>
+<ImageFigure src={overviewDashboard} alt="">
+  An aggregation of reboot events in your fleet. Drill down to find out which
+  devices are causing an anomaly.
+</ImageFigure>
 
-<figure>
-  <img src="/img/docs/platform/device-search-by-timeseries-min.png" alt="" />
-  <figcaption>
-    Search devices using complex queries. In this example, we're looking for
-    devices that have had a battery percentage of more than 80 in the week
-    starting on March 3rd.
-  </figcaption>
-</figure>
+import fleetMetrics from "../../static/binary-assets/fleet-wide-metrics-compare-min.png";
 
-<figure>
-  <img src="/img/docs/platform/device-set-page-min.png" alt="" />
-  <figcaption>
-    Save your searches as device sets and observe the evolution of the results.
-  </figcaption>
-</figure>
+<ImageFigure src={fleetMetrics} alt="">
+  Compare aggregated custom metrics on your whole fleet and see the effect of
+  your recent updates using hard data.
+</ImageFigure>
+
+import deviceSearch from "../../static/img/docs/platform/device-search-by-timeseries-min.png";
+
+<ImageFigure src={deviceSearch} alt="">
+  Search devices using complex queries. In this example, we're looking for
+  devices that have had a battery percentage of more than 80 in the week
+  starting on March 3rd.
+</ImageFigure>
+
+import deviceSetPage from "../../static/img/docs/platform/device-set-page-min.png";
+
+<ImageFigure src={deviceSetPage} alt="">
+  Save your searches as device sets and observe the evolution of the results.
+</ImageFigure>
 
 <ReadMoreAdmonition>
 
