MFLT-6497 Optimize ImageFigure component to show original (#261)

--- a/docs/platform/organization-auth-tokens.mdx
+++ b/docs/platform/organization-auth-tokens.mdx
@@ -14,13 +14,9 @@ Keys will not work.
 
 :::
 
-<p align="center">
-  <img
-    width="800"
-    src="/binary-assets/organization-auth-token-list-min.png"
-    alt="/binary-assets/organization-auth-token-list-min.png"
-  />
-</p>
+import orgAuthTokenList from "../../static/binary-assets/organization-auth-token-list.png";
+
+<ImageFigure src={orgAuthTokenList} alt=""></ImageFigure>
 
 ### Creation
 
@@ -28,12 +24,9 @@ Administrators can create new tokens via the **Create Token** button. They will
 be prompted to enter an optional description. After that, they are shown the
 token and should store it somewhere safe.
 
-<p align="center">
-  <img
-    src="/binary-assets/organization-auth-token-new-min.png"
-    alt="/binary-assets/organization-auth-token-new-min.png"
-  />
-</p>
+import orgAuthTokenNew from "../../static/binary-assets/organization-auth-token-new.png";
+
+<ImageFigure src={orgAuthTokenNew} alt=""></ImageFigure>
 
 ### Deletion
 
