Fix bad :::info section

--- a/docs/android/android-getting-started-guide.mdx
+++ b/docs/android/android-getting-started-guide.mdx
@@ -218,10 +218,12 @@ that you wish to validate. Connect that device via ADB (verify via
 ./bort_cli.py validate-sdk-integration --bort-app-id your.app.id
 ```
 
-```info
+:::info
+
 We recommend running the validation tool with a `userdebug` system image. A `user` image does not allow
 all checks to be run, which may result in Bort configuration issues being missed.
-```
+
+:::
 
 If you have multiple devices connected, use the `--device` flag to specify the
 target device. For more information on the different options, run the command
