MFLT-6637 Update Linux SDK instructions to include SSL (#272)
* Remove instructions to unset SSL

 ### Issues addressed
These instructions were required before we had SHA hashes for Linux OTA
artifacts. However, we recently added SHA hashes for artifacts and these
instructions are not required.

 ### Summary of changes
Remove the disable SSL instructions.

 ### Test plan
Followed this advice in the QEMU environment and confirmed I could still
do an update.

* Prettified Code!

Co-authored-by: topher200 <topher200@users.noreply.github.com>

--- a/docs/android/android-getting-started-guide.mdx
+++ b/docs/android/android-getting-started-guide.mdx
@@ -220,8 +220,9 @@ that you wish to validate. Connect that device via ADB (verify via
 
 :::info
 
-We recommend running the validation tool with a `userdebug` system image. A `user` image does not allow
-all checks to be run, which may result in Bort configuration issues being missed.
+We recommend running the validation tool with a `userdebug` system image. A
+`user` image does not allow all checks to be run, which may result in Bort
+configuration issues being missed.
 
 :::
 
