--- a/docs/mcu/nrf-connect-sdk-guide.mdx
+++ b/docs/mcu/nrf-connect-sdk-guide.mdx
@@ -3,6 +3,7 @@ id: nrf-connect-sdk-guide
 title: nRF Connect SDK Integration Guide
 sidebar_label: nRF Connect SDK
 description: "Integrate Memfault using the nRF Connect SDK."
+toc_max_heading_level: 4
 ---
 
 import SendingDataOverUdp from "@site/src/pages/_partials/_sending-data-over-udp.mdx";
@@ -586,3 +587,50 @@ See the list in this file in the NCS repo:
 - [nRF Connect SDK documentation on built-in Memfault Firmware SDK integration](https://developer.nordicsemi.com/nRF_Connect_SDK/doc/1.8.0/nrf/libraries/others/memfault_ncs.html)
   (starting from v.1.6.0).
 - [Nordic's sample Memfault Firmware SDK integration project](https://developer.nordicsemi.com/nRF_Connect_SDK/doc/1.8.0/nrf/samples/nrf9160/memfault/README.html#memfault-sample).
+
+## Frequently Asked Questions (FAQ)
+
+### Updating the Memfault SDK
+
+The nRF Connect SDK embeds the Memfault SDK as a module:
+
+- <https://github.com/nrfconnect/sdk-nrf/blob/v2.0.2/west.yml#L169-L172>
+
+If you would like to update the Memfault SDK without updating the nRF Connect
+SDK here are some strategies:
+
+#### Add the Memfault SDK as a module in the application's `west.yml`
+
+```yaml
+# Example application manifest
+manifest:
+  remotes:
+    - name: nrf-connect-sdk
+      url-base: https://github.com/nrfconnect
+  projects:
+    - name: sdk-nrf
+      remote: nrf-connect-sdk
+      path: nrf
+      revision: v2.0.2
+      import: true
+    # list the Memfault SDK as a top-level module
+    - name: memfault-firmware-sdk
+      url: https://github.com/memfault/memfault-firmware-sdk
+      path: modules/lib/memfault-firmware-sdk
+      revision: 0.31.5
+  self:
+    path: my_example_application
+```
+
+Zephyr's `west` tool will use the explicitly listed version of the
+`memfault-firmware-sdk` module instead of the one specified by the
+`nrf-connect-sdk` module. Reference:
+
+- <https://docs.zephyrproject.org/latest/develop/west/manifest.html#example-1-3-downstream-of-a-zephyr-release-with-module-fork>
+
+#### Fork the nRF Connect SDK
+
+Update the `west.yml` in the forked copy to point to a different Memfault SDK
+version. This strategy is only recommended if other modifications to the nRF
+Connect SDK are required, since it means maintaining and updating the forked
+repo.
