MFLT-6592 Document hiding of Issues with zero recent Traces (#276)
MFLT-6592 Document hiding of Issues with zero recent Traces

- Adds information on why we automatically hide issues with zero traces.

Co-authored-by: SionAbes <SionAbes@users.noreply.github.com>
Co-authored-by: Heiko Behrens <mail@HeikoBehrens.net>

--- a/docs/platform/issue-management.mdx
+++ b/docs/platform/issue-management.mdx
@@ -81,3 +81,9 @@ Software Versions, Hardware Versions and Cohorts using the distribution
 visualization charts present in the **Issue details** view:
 
 ![Issue distribution](/img/docs/platform/issue-distribution-min.png)
+
+## Automated Hiding of Issues with zero Traces
+
+As traces are deleted after 60 days, Memfault will hide the related Issues
+automatically. This helps declutter your dashboards so that only relevant Issues
+are displayed.
