Tell users how they can view expired issues (#278)

--- a/docs/platform/issue-management.mdx
+++ b/docs/platform/issue-management.mdx
@@ -87,3 +87,6 @@ visualization charts present in the **Issue details** view:
 As traces are deleted after 60 days, Memfault will hide the related Issues
 automatically. This helps declutter your dashboards so that only relevant Issues
 are displayed.
+
+To view Issues that have been hidden to do their traces being expired, you can
+click "All" in the filter panel of the Issues view.
