Zephyr getting started guide (#275)

--- a/docs/mcu/arm-nxp-mcuxpresso-guide.mdx
+++ b/docs/mcu/arm-nxp-mcuxpresso-guide.mdx
@@ -2,6 +2,7 @@
 id: arm-nxp-mcuxpresso-guide
 title: NXP MCUXpresso Getting Started Guide for ARM
 sidebar_label: NXP MCUXpresso SDK for i.MX RT
+description: Integrate Memfault with NXP MCUXpresso SDK for i.MX RT.
 ---
 
 This tutorial will go over integrating the
