--- a/docs/mcu/esp32-guide.mdx
+++ b/docs/mcu/esp32-guide.mdx
@@ -2,6 +2,7 @@
 id: esp32-guide
 title: ESP32 ESP-IDF Integration Guide
 sidebar_label: ESP32 ESP-IDF
+description: Integrate Memfault on the ESP32 ESP-IDF platform.
 ---
 
 import ProjectAwareCreateAProject from "@site/src/components/ProjectAwareCreateAProject";
