--- a/src/pages/_partials/_integration-guide-table.mdx
+++ b/src/pages/_partials/_integration-guide-table.mdx
@@ -8,5 +8,6 @@
 | ESP8266               |     [ESP8266 RTOS Integration Guide](/docs/mcu/esp8266-rtos-sdk-guide)     |
 | Dialog DA1469x        |          [DA1469x Integration Guide](/docs/mcu/da1469x-sdk-guide)          |
 | NXP MCUXpresso RT1060 | [NXP MCUXpresso SDK for i.MX RT Guide](/docs/mcu/arm-nxp-mcuxpresso-guide) |
+| Zephyr RTOS           |             [Zephyr Integration Guide](/docs/mcu/zephyr-guide)             |
 
 </center>
