Fix a few random typos (#283)

--- a/docs/mcu/arm-cortex-m-guide.mdx
+++ b/docs/mcu/arm-cortex-m-guide.mdx
@@ -89,7 +89,7 @@ or TI ARM Compiler.
 
 ### Confirm Integration Links
 
-At this point your project should compile and be able to boot. On startup you
+At this point, your project should compile and be able to boot. On startup you
 should see some messaging like the following print when
 `memfault_platform_boot()` is called:
 
