--- a/docs/mcu/da1469x-sdk-guide.mdx
+++ b/docs/mcu/da1469x-sdk-guide.mdx
@@ -214,7 +214,7 @@ stack traces when a stack overflow takes place.
 
 :::
 
-At this point your project should compile and be able to boot. On startup, if
+At this point, your project should compile and be able to boot. On startup, if
 you have logging enabled, you should see some messages like the following print
 when `memfault_platform_boot()` is called:
 
