--- a/docs/mcu/xilinx-a53-sdk-guide.mdx
+++ b/docs/mcu/xilinx-a53-sdk-guide.mdx
@@ -98,7 +98,7 @@ infrastructure for your own platform if you do not yet have one set up.
 
 ### Confirm Integration Links
 
-At this point your project should compile and be able to boot.
+At this point, your project should compile and be able to boot.
 
 ## Local Testing
 
