--- a/src/pages/_partials/_steps/_publish-data-to-cloud.mdx
+++ b/src/pages/_partials/_steps/_publish-data-to-cloud.mdx
@@ -15,7 +15,7 @@ If you cannot post data directly using HTTP, no problem at all. In fact, that is
 one of the most common configurations. In these setups, data can be proxied from
 the MCU to a device which can perform a HTTP request over transports such as
 UART, BLE, COAP, LoRa, Zigbee, etc). The size of a "chunk" is fully configurable
-by you can be tuned to best match your transport requirements. All message
+and can be tuned to best match your transport requirements. All message
 re-assembly is dealt with by Memfault in the cloud.
 
 :::
