Add getting started guide for ModusToolbox (#280)
* Add getting started guide for ModusToolbox

--- a/src/pages/_partials/_steps/_post-data-with-memfault-ui.mdx
+++ b/src/pages/_partials/_steps/_post-data-with-memfault-ui.mdx
@@ -19,8 +19,9 @@ shell> export
 [00:00:10] INFO: MC:SFQCpwIBAwEHalRFU1RTRVJJQUwKbXRlc3Qtc29mdHdhcmUJajEuMC4wLXRlcw==:
 ```
 
-Copy the logs from the console, navigate to the "Chunks Debug" view for your
-project, and paste the logs:
+Copy the logs from the console, navigate to the
+["Chunks Debug"](https://mflt.io/chunks-debug) view for your project, and paste
+the logs:
 
 ![](/binary-assets/embedded/copy-paste-chunks-ui.png)
 
