MFLT-6589 Fix self-serve redirect errors (#282)
https://memfault.myjetbrains.com/youtrack/issue/MFLT-6589

1) Self serve docs for non-embedded links were broken

2) Open docs links in new tab so the users stays on Memfault app while reading docs

--- a/blog/2022-02-28.mdx
+++ b/blog/2022-02-28.mdx
@@ -67,7 +67,7 @@ The charts “Seen Devices” and “Received Events” have been removed.
 - Improved documentation:
   [FAQ on integration of ARM Cortex-M](/docs/mcu/arm-cortex-m-guide#frequently-asked-questions),
   Note about
-  [Newlib C Assertion handler](/docs/mcu/self-serve/#newlib-c-library-asserth),
+  [Newlib C Assertion handler](/docs/mcu/embedded-self-serve/#newlib-c-library-asserth),
   more details on
   [How to Organize your Devices using Memfault](/docs/platform/projects-and-fleets),
   many details on [Memfault’s Android SDK](/docs/android/introduction)
